@@ -1,3 +1,11 @@
+2013-07-09  Graham Lee <iamleeg@gmail.com>
+
+        * Source/GNUmakefile:
+        * Source/NSInvocationOperation.m:
+        * Headers/Foundation/Foundation.h:
+        * Headers/Foundation/NSInvocationOperation.h:
+        New invocation operation class
+
 2013-07-09  Richard Frith-Macdonald <rfm@gnu.org>
 
         * Source/GSTLS.m: Fix memory leak (credentials)
